# GoState

Gostate/: ARCHITECTURE.md  Agents.md  CONTEXT_SYNC.md  README.md  pyproject.toml  requirements.txt
Gostate/app/: __init__.py  cli.py  main.py
Gostate/app/core/: config.py  problem_details.py  security.py
Gostate/app/models/: __init__.py  context.py  user.py
Gostate/app/repositories/: __init__.py  contexts.py  users.py
Gostate/app/static/: index.html
Gostate/docs/: PUTER_AI.md
Gostate/supabase/: schema.sql
Gostate/supabase/migrations/: 20260525164957_create_gostate_core_schema.sql  20260525165150_harden_gostate_table_grants.sql
Gostate/tests/: conftest.py  test_cli.py  test_dev_console.py  test_main.py  test_models.py  test_repositories.py  test_security.py
