[project]
name = "gostate"
version = "0.1.0"
description = "GoState context preservation backend MVP."
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "jax>=0.4.30",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.8.0",
    "pyjwt>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["asyncpg"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "N",
    "S",
    "UP",
]
ignore = [
    "N818",
    "S101",
]
